--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <parent>
     <groupId>org.jitsi</groupId>
     <artifactId>jitsi-universe-public</artifactId>
-    <version>1.0</version>
+    <version>1.0.3-SNAPSHOT</version>
+    <relativePath>../jitsi-universe-public/pom.xml</relativePath>
   </parent>
 
   <artifactId>ice4j</artifactId>
